Ajout de restangular.

--- a/src/LarpManager/Views/layout.twig
+++ b/src/LarpManager/Views/layout.twig
@@ -80,11 +80,13 @@
 		</script>
 					    
 		{# Angular #}
-	    <script src="{{ app.request.basepath }}/js/angular/1.4.8/angular.min.js"></script>
-	    <script src="{{ app.request.basepath }}/js/angular/1.4.8/angular-resource.min.js"></script>
+	    <script src="{{ app.request.basepath }}/js/angular/1.2.29/angular.min.js"></script>
+	    <script src="{{ app.request.basepath }}/js/angular/1.2.29/underscore.min.js"></script>
+	    <script src="{{ app.request.basepath }}/js/angular/1.2.29/restangular.min.js"></script>
+	    {#}<script src="{{ app.request.basepath }}/js/angular/1.4.8/angular-resource.min.js"></script>#}
 	    {#<script src="{{ app.request.basepath }}/js/angular/1.4.8/formly.min.js"></script>
 	    <script src="{{ app.request.basepath }}/js/angular/1.4.8/angular-formly-templates-bootstrap.min.js"></script>#}
-	    <script src="{{ app.request.basepath }}/js/angular/1.4.8/xeditable.min.js"></script>
+	    <script src="{{ app.request.basepath }}/js/angular/1.2.29/xeditable.min.js"></script>
 	    
 	    <script src="{{ app.request.basepath }}/js/api/services.js"></script>
 	    <script src="{{ app.request.basepath }}/js/api/controllers.js"></script>
