--- a/src/LarpManager/Views/territoire/index.twig
+++ b/src/LarpManager/Views/territoire/index.twig
@@ -22,18 +22,20 @@
 							<i class="fa fa-plus"></i>Créer un nouveau territoire
 						</a>
 					</div>
+					
+					<input type="text" ng-model="search" placeholder="Search">
 				</div>
 				<div class="panel-body">
 					<div class="list-group">
-						
+						<div ng-repeat="territoire in territoires | filter:search | orderBy:'+nom'">
 							<a 
 								href="#" 
 								class="list-group-item"
-								ng-click="select(territoire)"
-								ng-repeat="territoire in territoires">
+								ng-click="selectTerritoire(territoire)"
+								>
 								{[{ territoire.nom }]}
 							</a>
-						
+						</div>
 					</div>
 				</div>
 			</div>
@@ -42,8 +44,7 @@
 
 			<h2>
 				<span editable-text="selected.nom"
-					buttons="no"
-					onaftersave="updateSelected()"
+					onaftersave="saveTerritoire(selected)"
 					e-form="nomBtnForm">
 					{[{ selected.nom || "non renseigné" }]}
 				</span>
@@ -59,6 +60,7 @@
 			</div>
 			
 			<p 	editable-textarea="selected.description"
+				onaftersave="update(selected)"
 				e-rows="10" 
 				e-cols="90"
 				e-form="descriptionBtnForm">
@@ -74,6 +76,7 @@
 			
 			<p>Capitale : 
 				<span editable-text="selected.capitale"
+					onaftersave="update(selected)"
 					e-form="capitaleBtnForm">
 					{[{ selected.capitale || "non renseigné" }]}
 				</span>
@@ -84,6 +87,7 @@
 			
 			<p>Politique :
 				<span editable-text="selected.politique"
+					onaftersave="update(selected)"
 					e-form="politiqueBtnForm">
 					{[{ selected.politique || "non renseigné" }]}
 				</span>
@@ -94,6 +98,7 @@
 			
 			<p>Dirigeant : 
 				<span editable-text="selected.dirigeant"
+					onaftersave="update(selected)"
 					e-form="dirigeantBtnForm">
 					{[{ selected.dirigeant || "non renseigné" }]}
 				</span>
@@ -104,6 +109,7 @@
 			
 			<p>Population : 
 				<span editable-text="selected.population"
+					onaftersave="update(selected)"
 					e-form="populationBtnForm">
 					{[{ selected.population || "non renseigné" }]}
 				</span>
@@ -114,6 +120,7 @@
 			
 			<p>Symbole :
 				<span editable-text="selected.symbole"
+					onaftersave="update(selected)"
 					e-form="symboleBtnForm">
 					{[{ selected.symbole || "non renseigné" }]}
 				</span>
@@ -124,6 +131,7 @@
 			
 			<p>Niveau technologique :
 				<span editable-text="selected.tech_level"
+					onaftersave="update(selected)"
 					e-form="techBtnForm">
 					{[{ selected.tech_level || "non renseigné" }]}
 				</span>
@@ -132,8 +140,9 @@
 				</a>
 			</p>
 			
-			<p>Type :
+			<p>Type racial:
 				<span editable-text="selected.type_racial"
+					onaftersave="update(selected)"
 					e-form="typeRacialBtnForm">
 					{[{ selected.type_racial || "non renseigné" }]}
 				</span>
@@ -144,6 +153,7 @@
 			
 			<p>Frontières :
 				<span editable-text="selected.frontieres"
+					onaftersave="update(selected)"
 					e-form="frontieresBtnForm">
 					{[{ selected.frontieres || "non renseigné" }]}
 				</span>
@@ -174,11 +184,13 @@
 			<p>Noms masculins</p>
 			<p>Noms Féminins</p>
 						
-			<div class="header">
-				<h5>Chronologie</h5>
-			</div>
+						
 			
-			
+				<div class="header">
+					<h5>Chronologie</h5>
+				</div>
+				
+				
   				<table class="table table-bordered table-hover table-condensed">
   					<thead>
 	  					<tr>
@@ -200,7 +212,7 @@
   							</span>
   						</td>
   						<td>
-  							<span editable-textarea="event.description" 
+  							<span editable-text="event.description" 
 	  							e-name="description" 
 	  							e-form="rowform" 
 	  							onbeforesave="checkDescription($data, event.id)" 
@@ -222,20 +234,20 @@
 					        <form 
 					        	editable-form 
 					        	name="rowform" 
-					        	onbeforesave="updateSelected()" 
+					        	onbeforesave="updateEvent()" 
 					        	ng-show="rowform.$visible" 
 					        	class="form-buttons form-inline" 
 					        	shown="inserted == event">
-					          <button type="submit" ng-disabled="rowform.$waiting" class="btn btn-primary">
-					            save
+					          <button type="submit" ng-disabled="rowform.$waiting" ng-click="updateEvent(event)" class="btn btn-primary">
+					            <i class="fa fa-floppy-o"></i>
 					          </button>
 					          <button type="button" ng-disabled="rowform.$waiting" ng-click="rowform.$cancel()" class="btn btn-default">
-					            cancel
+					            <i class="fa fa-undo"></i>
 					          </button>
 					        </form>
 					        <div class="buttons" ng-show="!rowform.$visible">
-					          <button class="btn btn-primary" ng-click="rowform.$show()">edit</button>
-					          <button class="btn btn-danger" ng-click="removeEvent($index)">del</button>
+					          <button class="btn btn-primary" ng-click="rowform.$show()"><i class="fa fa-pencil"></i></button>
+					          <button class="btn btn-danger" ng-click="removeEvent(event)"><i class="fa fa-times"></i></button>
 					        </div>  
   						</td>
   					</tr>
@@ -243,7 +255,8 @@
   				</table>
   				
   				<button class="btn btn-default" ng-click="addEvent()">Ajouter un événement</button>
-  					
+	  			
+	  			
 			<div class="header">
 				<h5>Groupes liés</h5>
 			</div>
